XFIRE-984 : support for accessing handlers defined in spring context via annotations
git-svn-id: http://svn.codehaus.org/xfire/trunk/xfire@2176 c7d0bf07-ec0d-0410-b2cc-d48fa9be22ba